Add KMS decrypt to task policy

--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -248,6 +248,15 @@ Resources:
               Service:
                 - ecs-tasks.amazonaws.com
       Policies:
+        - PolicyName: Secrets
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "kms:Decrypt"
+                Resource:
+                  - '*'
         - PolicyName: SesSend
           PolicyDocument:
             Version: '2012-10-17'
