Add task role to Courier worker task

--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -443,6 +443,11 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+      TaskRoleArn:
+        !If
+          - IsStagingCourierStack
+          - !GetAtt CourierWebTaskIamRole.Arn
+          - !Ref AWS::NoValue
   WorkerService:
     Condition: CreateWorkerResources
     Type: "AWS::ECS::Service"
