Add aws-secret support for iframely stack

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -126,6 +126,8 @@ Parameters:
     Type: String
   IframelyEcrImageTag:
     Type: String
+  IframelySecretsVersion:
+    Type: String
 Resources:
   ExchangeStack:
     Type: "AWS::CloudFormation::Stack"
@@ -721,7 +723,7 @@ Resources:
         PlatformALBListenerPriorityPrefix: !Ref IframelyPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref IframelyEcrImageTag
         ExplicitHostHeader: embed.pri.org
-        SecretsVersion: none
+        SecretsVersion: !Ref IframelySecretsVersion
         AppName: "iframely"
         CreateWorker: "false"
         ContainerPort: "8061"
