--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -102,6 +102,8 @@ Parameters:
     Type: String
   IframelyEcrImageTag:
     Type: String
+  IframelySecretsVersions:
+    Type: String
   RadiotopiaTowerLambdaCodeS3ObjectVersion:
     Type: String
   PixelPrxOrgCodeS3ObjectVersion:
@@ -337,6 +339,7 @@ Resources:
         # Iframely
         IframelyPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
         IframelyEcrImageTag: !Ref IframelyEcrImageTag
+        IframelySecretsVersion: !Ref IframelySecretsVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
