--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -102,7 +102,7 @@ Parameters:
     Type: String
   IframelyEcrImageTag:
     Type: String
-  IframelySecretsVersions:
+  IframelySecretsVersion:
     Type: String
   RadiotopiaTowerLambdaCodeS3ObjectVersion:
     Type: String
