--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -47,6 +47,11 @@ Parameters:
     MinValue: 5
     MaxValue: 1024
     ConstraintDescription: must be between 5 and 1024Gb.
+  BackupRetentionPeriod:
+    Type: Number
+    Description: Days to retain backups (0 = no backups)
+    Default: 7
+    AllowedValues: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
   DBInstanceClass:
     Description: The database instance type
     Type: String
@@ -132,6 +137,11 @@ Parameters:
     Default: ""
     Description: ops warn SNS Topic arn
     Type: String
+  ProjectName:
+    Type: String
+    Description: Value for the project tag
+    MinLength: 1
+    MaxLength: 256
 Conditions:
   UseSnapshot: !Not [!Equals [!Ref DBSnapshot, ""]]
   CreateDB: !Not [!Equals [!Ref CreateDBName, ""]]
@@ -145,6 +155,7 @@ Conditions:
   CreateCloudWatchWarnConnections: !And
     - !Not [!Equals [!Ref OpsWarnSnsTopic, ""]]
     - !Not [!Equals [!Ref CloudWatchWarnConnections, 0]]
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
 Resources:
   RDSSubnetGroup:
     Type: "AWS::RDS::DBSubnetGroup"
@@ -162,35 +173,41 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
-      DeletionProtection: true
-      # CloudFormation cannot update a stack when a custom-named resource requires replacing,
-      # so when replacement is required (such as when restoring from snapshot),
-      # use a new instance name such as oldname-restoredYYYYMMDD
-      # Better yet to self manage tearing down of the existing resource, use a new stack with a different instance name
+      AllocatedStorage: !Ref DBAllocatedStorage
+      AllowMajorVersionUpgrade: false
+      AutoMinorVersionUpgrade: false
+      BackupRetentionPeriod: !Ref BackupRetentionPeriod
+      CopyTagsToSnapshot: true
+      DBInstanceClass: !Ref DBInstanceClass
       DBInstanceIdentifier:
         !If [NamedInstance, !Ref DBInstance, !Ref "AWS::NoValue"]
       DBName: !If [CreateDB, !Ref CreateDBName, !Ref "AWS::NoValue"]
-      AllocatedStorage: !Ref DBAllocatedStorage
-      StorageType: gp2
-      DBInstanceClass: !Ref DBInstanceClass
       DBSnapshotIdentifier:
         !If [UseSnapshot, !Ref DBSnapshot, !Ref "AWS::NoValue"]
+      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
+      DeleteAutomatedBackups: true
+      DeletionProtection: true
+      EnablePerformanceInsights: !If [IsProduction, true, false]
       Engine: MySQL
       EngineVersion: !Ref EngineVersion
       MasterUsername: !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBUser]
       MasterUserPassword:
         !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBPassword]
-      MultiAZ: false
+      MultiAZ: !If [IsProduction, true, false]
+      PerformanceInsightsRetentionPeriod: !If [IsProduction, 7, !Ref "AWS::NoValue"]
+      PreferredBackupWindow: "08:00-08:30"
+      PreferredMaintenanceWindow: "tue:06:15-tue:06:45"
+      PubliclyAccessible: true
+      StorageType: gp2
       Tags:
         - Key: Project
-          Value: cms.prx.org
+          Value: !Ref ProjectName
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
     # The MySQL_replication_tunnel security group is added and removed manually for use during migration
     #     VPCSecurityGroups: [!Ref EC2SecurityGroup]
     # replication won't connect via tunnel if false
