--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -1,7 +1,7 @@
 # db/mysql-instance.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
-  AWS CloudFormation RDS Template: Template to create RDS MySQL v5.5 instance.
+  AWS CloudFormation RDS Template: Template to create RDS MySQL instance.
 Parameters:
   DBInstance:
     Default: "name-me"
