--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -25,7 +25,7 @@ Resources:
       VersioningConfiguration:
         Status: Suspended
   InfrastructureSourceBucket:
-    Type: "AWS::S3::Bucket"
+    Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-source
@@ -39,7 +39,7 @@ Resources:
       VersioningConfiguration:
         Status: Suspended
   InfrastructureConfigBucket:
-    Type: "AWS::S3::Bucket"
+    Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-config
@@ -53,7 +53,7 @@ Resources:
       VersioningConfiguration:
         Status: Enabled
   InfrastructureSnapshotsBucket:
-    Type: "AWS::S3::Bucket"
+    Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-snapshots
@@ -67,7 +67,7 @@ Resources:
       VersioningConfiguration:
         Status: Suspended
   InfrastructureApplicationCodeBucket:
-    Type: "AWS::S3::Bucket"
+    Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-application-code
