Improve whitespace handling

--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -1,6 +1,6 @@
 # storage/storage.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+Description: >-
   Creates the standard S3 buckets that are necessary for launching the rest of
   the infrastructure
 Parameters:
@@ -90,7 +90,7 @@ Outputs:
     Export:
       Name: !Sub ${AWS::StackName}-InfrastructureSourceBucket
   InfrastructureSourceBucketUrl:
-    Description: >
+    Description: >-
       The complete S3 URL for the Source bucket (e.g.,
       https://s3.amazonaws.com/acme-us-west-2-source/)
     Value:
