--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -11,7 +11,7 @@ Conditions:
 Resources:
   # S3 Buckets
   InfrastructureSupportBucket:
-    Type: "AWS::S3::Bucket"
+    Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-support
