--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -13,6 +13,7 @@ Resources:
   InfrastructureSupportBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-support
       Tags:
@@ -27,6 +28,7 @@ Resources:
   InfrastructureSourceBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-source
       Tags:
@@ -41,6 +43,7 @@ Resources:
   InfrastructureConfigBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-config
       Tags:
@@ -55,6 +58,7 @@ Resources:
   InfrastructureSnapshotsBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-snapshots
       Tags:
@@ -69,6 +73,7 @@ Resources:
   InfrastructureApplicationCodeBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-application-code
       Tags:
