Update docs in single-origin template

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -4,8 +4,10 @@
 # Origin Access Identity. This template can create that identity, but it cannot
 # update the origin bucket's policy to grant the identity access permissions.
 # Once the stack has been created, add a policy like the following to the
-# bucket, substituting the bucket name and the S3 canonical user ID (whose
-# value is an output of the stack)
+# bucket. Be sure to replace the bucket name in the Resource, and change the
+# object prefix to match only what CloudFront needs access to. Also replace
+# the origin access identity, such as E15MNIMTCFKK4C, in the Principal. You can
+# find that value in the stack outputs under CloudFrontOriginAccessIdentityId.
 # {
 #     "Version": "2012-10-17",
 #     "Id": "CloudFrontOrigin",
@@ -14,7 +16,7 @@
 #             "Sid": "Grant read access to a CloudFront Origin Identity",
 #             "Effect": "Allow",
 #             "Principal": {
-#                 "CanonicalUser":"XXXXXXXXXXXXXX"
+#                 "AWS": "arn:aws:iam::cloudfront:user/CloudFront Origin Access Identity XXXXXXXXXXXXXX"
 #             },
 #             "Action": "s3:GetObject",
 #             "Resource": "arn:aws:s3:::XXXXXXX-bucketname/*"
