Pull dockerhub login from parameterstore

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -216,6 +216,12 @@ Resources:
             Value:
               Fn::ImportValue:
                 !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
+          - Name: DOCKERHUB_USERNAME
+            Type: PARAMETER_STORE
+            Value: /prx/DOCKERHUB_USERNAME
+          - Name: DOCKERHUB_PASSWORD
+            Type: PARAMETER_STORE
+            Value: /prx/DOCKERHUB_PASSWORD
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
         PrivilegedMode: true
         Type: LINUX_CONTAINER
