Update ECS AMI and change instance type in staging

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -67,9 +67,9 @@ Mappings:
       WarningThreshold: "2"
       MaxSize: "3"
     Staging:
-      InstanceType: t2.small
+      InstanceType: t3a.small
       InstanceStorage: 22
-      AmiName: "amzn-ami-2018.03.20200430-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2018.03.20201028-amazon-ecs-optimized"
       MinSize: "2"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "9"
