--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -719,7 +719,7 @@ Resources:
         ContainerMemory: !Ref ContainerMemory
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
-        WebContainerCommand: cluster.js
+        WebContainerCommand: serve
         PlatformALBListenerPriorityPrefix: !Ref IframelyPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref IframelyEcrImageTag
         ExplicitHostHeader: embed.pri.org
