--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -1,212 +1,252 @@
 # db/mysql-instance.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >-
-  AWS CloudFormation RDS Template: Template to create RDS MySQL v5.5 instance.
+Description: Create an RDS MySQL instance
+Metadata:
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+      - Label:
+          default: General
+        Parameters:
+          - UniqueName
+          - DBInstanceIdentifier
+          - ProjectName
+          - EnvironmentType
+      - Label:
+          default: RDS Setup
+        Parameters:
+          - EngineVersion
+          - DBInstanceClass
+          - AllocatedStorage
+          - BackupRetentionPeriod
+      - Label:
+          default: DB Setup
+        Parameters:
+          - MasterUsername
+          - MasterUserPassword
+      - Label:
+          default: Networking
+        Parameters:
+          - VPCStackName
+      - Label:
+          default: Alarms
+        Parameters:
+          - AlarmSnsTopic
 Parameters:
-  DBInstance:
-    Default: "name-me"
-    Description: >-
-      The database instance name.
-      When replacement is required, must be different than existing instance name.
+  AlarmSnsTopic:
     Type: String
-    MinLength: 0
-    MaxLength: 64
-    AllowedPattern: ^$|[a-zA-Z][a-zA-Z0-9\-]*
-    ConstraintDescription: >-
-      optional, must begin with a letter and contain only alphanumeric characters or dash.
-  CreateDBName:
-    Default: ""
-    Description: The database schema name for create only
-    Type: String
-    MinLength: 0
-    MaxLength: 64
-    AllowedPattern: ^$|[a-zA-Z][a-zA-Z0-9\-_]*
-    ConstraintDescription: >-
-      must begin with a letter and contain only alphanumeric characters, dash,
-      or underscore.
-  DBUser:
-    NoEcho: true
-    Description: The database admin account username
-    Type: String
-    MinLength: 1
-    MaxLength: 16
-    AllowedPattern: ^[a-zA-Z][a-zA-Z0-9]*$
-    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
-  DBPassword:
-    NoEcho: true
-    Description: The database admin account password
-    Type: String
-    MinLength: 1
-    MaxLength: 41
-    AllowedPattern: ^[a-zA-Z0-9]+$
-    ConstraintDescription: must contain only alphanumeric characters.
-  DBAllocatedStorage:
-    Default: 20
-    Description: The size of the database (Gb)
+    Description: Optional topic arn for CloudWatch RDS alarms
+  AllocatedStorage:
     Type: Number
-    MinValue: 5
-    MaxValue: 1024
-    ConstraintDescription: must be between 5 and 1024Gb.
+    Description: The size of the database (GB)
+    Default: 100
+    AllowedValues: [100, 200, 300, 400, 500]
+  BackupRetentionPeriod:
+    Type: Number
+    Description: Days to retain backups (0 = no backups)
+    Default: 7
+    AllowedValues: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
   DBInstanceClass:
+    Type: String
     Description: The database instance type
+    Default: db.t3.small
+    AllowedValues: ["db.t3.micro", "db.t3.small", "db.t3.medium", "db.t3.large", "db.t3.xlarge", "db.m5.large", "db.m5.xlarge", "db.r5.large", "db.r5.xlarge"]
+  DBInstanceIdentifier:
     Type: String
-    Default: db.t2.small
-    AllowedValues:
-      - db.t1.micro
-      - db.m1.small
-      - db.m1.medium
-      - db.m1.large
-      - db.m1.xlarge
-      - db.m2.xlarge
-      - db.m2.2xlarge
-      - db.m2.4xlarge
-      - db.m3.medium
-      - db.m3.large
-      - db.m3.xlarge
-      - db.m3.2xlarge
-      - db.m4.large
-      - db.m4.xlarge
-      - db.m4.2xlarge
-      - db.m4.4xlarge
-      - db.m4.10xlarge
-      - db.m5.large
-      - db.m5.xlarge
-      - db.m5.2xlarge
-      - db.m5.4xlarge
-      - db.m5.12xlarge
-      - db.m5.24xlarge
-      - db.r3.large
-      - db.r3.xlarge
-      - db.r3.2xlarge
-      - db.r3.4xlarge
-      - db.r3.8xlarge
-      - db.m2.xlarge
-      - db.m2.2xlarge
-      - db.m2.4xlarge
-      - db.cr1.8xlarge
-      - db.t2.micro
-      - db.t2.small
-      - db.t2.medium
-      - db.t2.large
-    ConstraintDescription: must select a valid database instance type.
-  DBSnapshot:
-    Default: ""
-    Description: >-
-      optional, the DB snapshot that's used to restore the DB instance,
-      not used in conjunction with CreateDBName
-    Type: String
-    AllowedPattern: ^[a-zA-Z]*[a-zA-Z0-9\-:]*$
-    ConstraintDescription: >-
-      must begin with a letter and contain only alphanumeric characters, dash,
-      or colon.
+    Description: Unique name for the database instance (lower-case-dashed; SHOULD include env name)
+    AllowedPattern: ^[a-z][a-z0-9\-]*$
   EngineVersion:
     Type: String
-    Description: Mysql version to use
-    AllowedValues: ["8.0.21", "8.0.20", "5.7.31", "5.7.30", "5.5.46"]
+    Description: MySQL version to use
+    AllowedValues: ["5.6.48", "5.7.31", "8.0.21"]
   EnvironmentType:
     Type: String
-    AllowedValues:
-      - Staging
-      - Production
-  VPCStack:
-    Description: VPC stack to add this cache into
+    Description: Environment for this database
+    Default: Staging
+    AllowedValues: ["Testing", "Beta", "Staging", "Production"]
+  MasterUsername:
     Type: String
+    Description: MySQL root user name
+  MasterUserPassword:
+    Type: String
+    Description: MySQL root user password
+    NoEcho: true
+  ProjectName:
+    Type: String
+    Description: Value for the project tag
+    MinLength: 1
+    MaxLength: 256
+  UniqueName:
+    Type: String
+    Description: Unique name for associated resources (CamelCase; should not include env name)
+    AllowedPattern: ^[a-zA-Z][a-zA-Z0-9\-]*$
+  VPCStackName:
+    Type: String
+    Description: VPC stack to launch the database into
     Default: DataVPCStack
-  CloudWatchWarnDiskSpace:
-    Default: 0
-    Description: >-
-      amount of free disk space in bytes that will trigger warning, 0 means no alarm
-    Type: Number
-  CloudWatchWarnCPU:
-    Default: 0
-    Description: percent of CPU that will trigger warning, 0 means no alarm
-    Type: Number
-    MinValue: 0
-    MaxValue: 100
-    ConstraintDescription: must be between 0 and 100
-  CloudWatchWarnConnections:
-    Default: 0
-    Description: amount of connections that will trigger warning, 0 means no alarm
-    Type: Number
-  OpsWarnSnsTopic:
-    Default: ""
-    Description: ops warn SNS Topic arn
-    Type: String
 Conditions:
-  UseSnapshot: !Not [!Equals [!Ref DBSnapshot, ""]]
-  CreateDB: !Not [!Equals [!Ref CreateDBName, ""]]
-  NamedInstance: !Not [!Equals [!Ref DBInstance, ""]]
-  CreateCloudWatchWarnDiskSpace: !And
-    - !Not [!Equals [!Ref OpsWarnSnsTopic, ""]]
-    - !Not [!Equals [!Ref CloudWatchWarnDiskSpace, 0]]
-  CreateCloudWatchWarnCPU: !And
-    - !Not [!Equals [!Ref OpsWarnSnsTopic, ""]]
-    - !Not [!Equals [!Ref CloudWatchWarnCPU, 0]]
-  CreateCloudWatchWarnConnections: !And
-    - !Not [!Equals [!Ref OpsWarnSnsTopic, ""]]
-    - !Not [!Equals [!Ref CloudWatchWarnConnections, 0]]
+  CreateAlarms: !Not [!Equals [!Ref AlarmSnsTopic, ""]]
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
+Mappings:
+  EngineVersionMap:
+    "5.6.48":
+      family: mysql5.6
+    "5.7.31":
+      family: mysql5.7
+    "8.0.21":
+      family: mysql8.0
+  StorageAlarmMap:
+    "100":
+      threshold: 10
+    "200":
+      threshold: 20
+    "300":
+      threshold: 30
+    "400":
+      threshold: 40
+    "500":
+      threshold: 50
+  ConnectionAlarmMap:
+    # for mysql max_connections = {DBInstanceClassMemory/12582880}
+    db.t3.micro:
+      # 1 GiB = 1073741824 B -> 85 conns
+      threshold: 68
+    db.t3.small:
+      # 2 GiB = 2147483648 B -> 170 conns
+      threshold: 136
+    db.t3.medium:
+      # 4 GiB = 4294967296 B -> 341 conns
+      threshold: 272
+    db.t3.large:
+      # 8 GiB  = 8589934592 B -> 682 conns
+      threshold: 545
+    db.t3.xlarge:
+      # 16 GiB  = 17179869184 B -> 1365 conns
+      threshold: 1092
+    db.m5.large:
+      # 8 GiB  = 8589934592 B -> 682 conns
+      threshold: 545
+    db.m5.xlarge:
+      # 16 GiB  = 17179869184 B -> 1365 conns
+      threshold: 1092
+    db.r5.large:
+      # 16 GiB  = 17179869184 B -> 1365 conns
+      threshold: 1092
+    db.r5.xlarge:
+      # 32 GiB = 34359738368 B -> 2730 conns
+      threshold: 2184
 Resources:
-  RDSSubnetGroup:
-    Type: "AWS::RDS::DBSubnetGroup"
-    DeletionPolicy: Retain
-    UpdateReplacePolicy: Retain
-    Properties:
-      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
-      DBSubnetGroupDescription: !Ref EnvironmentType
-      SubnetIds:
-        - Fn::ImportValue: !Sub ${VPCStack}-Subnet1
-        - Fn::ImportValue: !Sub ${VPCStack}-Subnet2
-  MasterDB:
+  MysqlInstance:
     Type: "AWS::RDS::DBInstance"
-    DependsOn: RDSSubnetGroup
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
-      DeletionProtection: true
-      # CloudFormation cannot update a stack when a custom-named resource requires replacing,
-      # so when replacement is required (such as when restoring from snapshot),
-      # use a new instance name such as oldname-restoredYYYYMMDD
-      # Better yet to self manage tearing down of the existing resource, use a new stack with a different instance name
-      DBInstanceIdentifier:
-        !If [NamedInstance, !Ref DBInstance, !Ref "AWS::NoValue"]
-      DBName: !If [CreateDB, !Ref CreateDBName, !Ref "AWS::NoValue"]
-      AllocatedStorage: !Ref DBAllocatedStorage
-      StorageType: gp2
+      AllocatedStorage: !Ref AllocatedStorage
+      AllowMajorVersionUpgrade: false
+      AutoMinorVersionUpgrade: false
+      BackupRetentionPeriod: !Ref BackupRetentionPeriod
+      CopyTagsToSnapshot: true
       DBInstanceClass: !Ref DBInstanceClass
-      DBSnapshotIdentifier:
-        !If [UseSnapshot, !Ref DBSnapshot, !Ref "AWS::NoValue"]
-      Engine: MySQL
+      DBInstanceIdentifier: !Ref DBInstanceIdentifier
+      DBParameterGroupName: !Ref MysqlParameterGroup
+      DBSubnetGroupName: !Ref MysqlSubnetGroup
+      DeleteAutomatedBackups: true
+      DeletionProtection: true
+      EnablePerformanceInsights: !If [IsProduction, true, false]
+      Engine: mysql
       EngineVersion: !Ref EngineVersion
-      MasterUsername: !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBUser]
-      MasterUserPassword:
-        !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBPassword]
-      MultiAZ: false
+      MasterUsername: !Ref MasterUsername
+      MasterUserPassword: !Ref MasterUserPassword
+      MultiAZ: !If [IsProduction, true, false]
+      PerformanceInsightsRetentionPeriod: !If [IsProduction, 7, !Ref "AWS::NoValue"]
+      PreferredBackupWindow: "08:00-08:30"
+      PreferredMaintenanceWindow: "tue:06:15-tue:06:45"
+      PubliclyAccessible: true
+      StorageType: gp2
       Tags:
         - Key: Project
-          Value: cms.prx.org
+          Value: !Ref ProjectName
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
-    # The MySQL_replication_tunnel security group is added and removed manually for use during migration
-    #     VPCSecurityGroups: [!Ref EC2SecurityGroup]
-    # replication won't connect via tunnel if false
-    # Post migration, we want to set PubliclyAccessible to false
-    # But we have to set this manually because if flipped with a stack update, the RDS instance is rebuilt
-    # It does not change with other stack updates if set manually
-    #     PubliclyAccessible: true
+      VPCSecurityGroups: [!Ref MysqlVPCSecurityGroup]
+  MysqlParameterGroup:
+    Type: "AWS::RDS::DBParameterGroup"
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
+    Properties:
+      Description: !Sub ${UniqueName} ${EnvironmentType} Parameter Group
+      Family: !FindInMap [EngineVersionMap, !Ref EngineVersion, family]
+      Tags:
+        - Key: Project
+          Value: !Ref ProjectName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  MysqlSubnetGroup:
+    Type: "AWS::RDS::DBSubnetGroup"
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
+    Properties:
+      DBSubnetGroupDescription: !Sub ${UniqueName} ${EnvironmentType} Subnet Group
+      DBSubnetGroupName: !Sub ${UniqueName}-${EnvironmentType}-Mysql
+      SubnetIds:
+        - Fn::ImportValue:
+            !Sub ${VPCStackName}-Subnet1
+        - Fn::ImportValue:
+            !Sub ${VPCStackName}-Subnet2
+      Tags:
+        - Key: Project
+          Value: !Ref ProjectName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  MysqlVPCSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
+    Properties:
+      GroupName: !Sub ${UniqueName}${EnvironmentType}Mysql
+      GroupDescription: !Sub ${UniqueName} ${EnvironmentType} Mysql Security Group
+      SecurityGroupIngress:
+        - CidrIp: 0.0.0.0/0
+          IpProtocol: "tcp"
+          FromPort: 3306
+          ToPort: 3306
+        - CidrIpv6: "::/0"
+          IpProtocol: "tcp"
+          FromPort: 3306
+          ToPort: 3306
+      Tags:
+        - Key: Name
+          Value: !Sub ${UniqueName}${EnvironmentType}Mysql
+        - Key: Project
+          Value: !Ref ProjectName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      VpcId:
+        Fn::ImportValue: !Sub ${VPCStackName}-VPC
   DiskSpaceAlarm:
-    Condition: CreateCloudWatchWarnDiskSpace
     Type: "AWS::CloudWatch::Alarm"
+    Condition: CreateAlarms
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[RDS][${EnvironmentType}][${MasterDB}] Disk Space"
-      AlarmActions: [!Ref OpsWarnSnsTopic]
-      InsufficientDataActions: [!Ref OpsWarnSnsTopic]
-      OKActions: [!Ref OpsWarnSnsTopic]
+      AlarmName: !Sub "[RDS][${UniqueName}][${EnvironmentType}] Disk Space"
+      AlarmActions: [!Ref AlarmSnsTopic]
+      InsufficientDataActions: [!Ref AlarmSnsTopic]
+      OKActions: [!Ref AlarmSnsTopic]
       AlarmDescription: Free Storage Space getting low
       ComparisonOperator: LessThanOrEqualToThreshold
       EvaluationPeriods: 1
@@ -214,57 +254,35 @@ Resources:
       Namespace: AWS/RDS
       Period: 300
       Statistic: Average
-      Threshold: !Ref CloudWatchWarnDiskSpace
-      Unit: Bytes
+      Threshold: !FindInMap [StorageAlarmMap, !Ref AllocatedStorage, threshold]
+      Unit: Gigabytes
       TreatMissingData: notBreaching
       Dimensions:
         - Name: DBInstanceIdentifier
-          Value: !Ref MasterDB
-  CPUAlarm:
-    Condition: CreateCloudWatchWarnCPU
-    Type: "AWS::CloudWatch::Alarm"
-    Properties:
-      ActionsEnabled: true
-      AlarmName: !Sub "[RDS][${EnvironmentType}][${MasterDB}] CPU"
-      AlarmActions: [!Ref OpsWarnSnsTopic]
-      InsufficientDataActions: [!Ref OpsWarnSnsTopic]
-      OKActions: [!Ref OpsWarnSnsTopic]
-      AlarmDescription: CPU utilization high
-      ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: 5
-      MetricName: CPUUtilization
-      Namespace: AWS/RDS
-      Period: 60
-      Statistic: Maximum
-      Threshold: !Ref CloudWatchWarnCPU
-      Unit: Percent
-      TreatMissingData: notBreaching
-      Dimensions:
-        - Name: DBInstanceIdentifier
-          Value: !Ref MasterDB
+          Value: !Ref MysqlInstance
   MaxConnectionsAlarm:
-    Condition: CreateCloudWatchWarnConnections
     Type: "AWS::CloudWatch::Alarm"
+    Condition: CreateAlarms
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[RDS][${EnvironmentType}][${MasterDB}] Database Connections"
-      AlarmActions: [!Ref OpsWarnSnsTopic]
-      InsufficientDataActions: [!Ref OpsWarnSnsTopic]
-      OKActions: [!Ref OpsWarnSnsTopic]
-      AlarmDescription: Database Connections nearing max
+      AlarmName: !Sub "[RDS][${UniqueName}][${EnvironmentType}] Database Connections"
+      AlarmActions: [!Ref AlarmSnsTopic]
+      InsufficientDataActions: [!Ref AlarmSnsTopic]
+      OKActions: [!Ref AlarmSnsTopic]
+      AlarmDescription: Database connections nearing max
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: DatabaseConnections
       Namespace: AWS/RDS
-      Period: 60
+      Period: 300
       Statistic: Maximum
-      Threshold: !Ref CloudWatchWarnConnections
+      Threshold: !FindInMap [ConnectionAlarmMap, !Ref DBInstanceClass, threshold]
       Unit: Count
       TreatMissingData: notBreaching
       Dimensions:
         - Name: DBInstanceIdentifier
-          Value: !Ref MasterDB
+          Value: !Ref MysqlInstance
 Outputs:
-  EC2Platform:
-    Description: Platform in which this stack is deployed
-    Value: EC2-VPC
+  InstanceId:
+    Description: InstanceId of the newly created RDS Instance
+    Value: !Ref MysqlInstance
