--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -49,7 +49,7 @@ Parameters:
     Type: String
     Description: The database instance type
     Default: db.t3.small
-    AllowedValues: ["db.t3.micro", "db.t3.small", "db.t3.medium", "db.t3.large", "db.t3.xlarge", "db.m5.large", "db.m5.xlarge", "db.r5.large", "db.r5.xlarge"]
+    AllowedValues: ["db.t3.micro", "db.t3.small", "db.t3.medium", "db.t3.large", "db.t3.xlarge", "db.m5.large", "db.m5.xlarge", "db.r5.large", "db.r5.xlarge", "db.m5.large", "db.m5.xlarge"]
   DBInstanceIdentifier:
     Type: String
     Description: Unique name for the database instance (lower-case-dashed; SHOULD include env name)
@@ -134,6 +134,12 @@ Mappings:
     db.r5.xlarge:
       # 32 GiB = 34359738368 B -> 2730 conns
       threshold: 2184
+    db.m5.large:
+      # 8 GiB  = 8589934592 B -> 682 conns
+      threshold: 545
+    db.m5.xlarge:
+      # 16 GiB  = 17179869184 B -> 1365 conns
+      threshold: 1092
 Resources:
   MysqlInstance:
     Type: "AWS::RDS::DBInstance"
