Revert staging to t2.small

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -67,7 +67,7 @@ Mappings:
       WarningThreshold: "2"
       MaxSize: "3"
     Staging:
-      InstanceType: t3a.small
+      InstanceType: t2.small
       InstanceStorage: 22
       AmiName: "amzn-ami-2018.03.20201028-amazon-ecs-optimized"
       MinSize: "2"
