--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -1,5 +1,6 @@
 # stacks/serverless/pixel.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
+Transform: AWS::Serverless-2016-10-31
 Description: API Gateway pixel tracker
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
