--- a/etc/cloudwatch-alarm-reader-role.yml
+++ b/etc/cloudwatch-alarm-reader-role.yml
@@ -1,7 +1,7 @@
 # etc/cloudwatch-alarm-reader-role.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
-  Creates IAM role that has read-only access to  CloudWatch alarm and alarm
+Description: >-
+  Creates IAM role that has read-only access to CloudWatch alarm and alarm
   history, which can be assumed by various services in accounts that belong
   to the same AWS organization. Intended to be launched as a StackSet that
   automatically deploys to all accounts in an organization.
@@ -11,7 +11,7 @@ Parameters:
   RoleNamePrefix:
     Type: String
     Default: PRX
-  RoleName:
+  RoleNameBase:
     Type: String
     Default: CloudWatchAlarmsOrgReader
 Resources:
@@ -40,7 +40,7 @@ Resources:
                   - cloudwatch:DescribeAlarms
                 Resource:
                   - "*"
-      RoleName: !Sub ${RoleNamePrefix}${RoleName}-${AWS::Region}
+      RoleName: !Sub ${RoleNamePrefix}${RoleNameBase}-${AWS::Region}
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -50,4 +50,4 @@ Resources:
           Value: !Ref AWS::StackId
 Outputs:
   RoleNamePattern:
-    Value: !Sub ${RoleNamePrefix}${RoleName}-region_id
+    Value: !Sub ${RoleNamePrefix}${RoleNameBase}-${AWS::Region}
