--- a/stacksets/cloudwatch-alarm-reader-role.yml
+++ b/stacksets/cloudwatch-alarm-reader-role.yml
@@ -1,4 +1,4 @@
-# TODO path
+# stacksets/cloudwatch-alarm-reader-role.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   Creates a StackSet that adds an IAM role to each account in an AWS
