Add Live Wire feed DNS

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -136,3 +136,7 @@ Resources:
         # Memory Palace
         - { Type: A,    Name: !Sub "pf8b35zhcw0t.${Domain}", AliasTarget: { DNSName: "d2uj1mxstn3zlc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf8b35zhcw0t.${Domain}", AliasTarget: { DNSName: "d2uj1mxstn3zlc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Live Wire
+        - { Type: A,    Name: !Sub "pf0613live.${Domain}", AliasTarget: { DNSName: "d286ggk3lf55e6.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf0613live.${Domain}", AliasTarget: { DNSName: "d286ggk3lf55e6.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
