Add Sleep With Me feed DNS record

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -140,3 +140,7 @@ Resources:
         # Live Wire
         - { Type: A,    Name: !Sub "pf0613live.${Domain}", AliasTarget: { DNSName: "d286ggk3lf55e6.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf0613live.${Domain}", AliasTarget: { DNSName: "d286ggk3lf55e6.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Sleep With me
+        - { Type: A,    Name: !Sub "pf9632swmp.${Domain}", AliasTarget: { DNSName: "d2bikk8qhi4lca.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9632swmp.${Domain}", AliasTarget: { DNSName: "d2bikk8qhi4lca.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
