--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -6,11 +6,6 @@ Parameters:
     Type: String
   SlackMessageRelayTopicArn:
     Type: String
-  LogGroupRetentionPolicyFunctionArn:
-    Type: AWS::SSM::Parameter::Value<String>
-    Description: >
-      The Parameter Store key for the log group retention policy function's
-      ARN (not the ARN itself)
   OpsErrorMessagesSnsTopicArn:
     Type: String
 Resources:
@@ -126,7 +121,10 @@ Resources:
                   const order = await getOrder(payload.api_url);
                   const orderEvent = await getEvent(order);
 
-                  await snsSlackRelay(message(order, orderEvent));
+                  await sns.publish({
+                    TopicArn: process.env.SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN,
+                    Message: JSON.stringify(message(order, orderEvent)),
+                  }).promise();
 
                   return { statusCode: 200, headers: {}, body: '' };
               } catch (e) {
@@ -203,22 +201,6 @@ Resources:
                   ].join('\n')
               };
           }
-
-          function snsSlackRelay(slackMessage) {
-              return new Promise((resolve, reject) => {
-                  sns.publish({
-                      TopicArn: process.env.SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN,
-                      Message: JSON.stringify(slackMessage),
-                  }, (err, data) => {
-                      if (err) {
-                          reject(err);
-                      } else {
-                          resolve();
-                      }
-                  });
-              });
-          }
-
       Description: Backs Eventbite webhook API Gateway
       Environment:
         Variables:
@@ -227,7 +209,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaIamRole.Arn
-      Runtime: nodejs10.x
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Misc
@@ -267,9 +249,8 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref LambdaFunction
-  LambdaFunctionLogRetentionPolicy:
-    Type: "Custom::LogGroupRetentionPolicy"
+  LambdaFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
     Properties:
-      ServiceToken: !Ref LogGroupRetentionPolicyFunctionArn
-      LogGroupName: !Sub "/aws/lambda/${LambdaFunction}"
+      LogGroupName: !Sub /aws/lambda/${LambdaFunction}
       RetentionInDays: 5
