--- a/etc/submittable-poller.yml
+++ b/etc/submittable-poller.yml
@@ -1,6 +1,6 @@
 # etc/submittable-poller.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+Description: >-
   Creates a Lambda function that polls the Submittable API and finds new
   submissions, which get sent to Slack
 Parameters:
@@ -22,11 +22,6 @@ Parameters:
     AllowedValues:
       - ENABLED
       - DISABLED
-  LogGroupRetentionPolicyFunctionArn:
-    Type: AWS::SSM::Parameter::Value<String>
-    Description: >
-      The Parameter Store key for the log group retention policy function's
-      ARN (not the ARN itself)
 Conditions:
   IsPollingPeriodOne: !Equals [!Ref PollingPeriod, 1]
 Resources:
@@ -138,29 +133,15 @@ Resources:
               };
           }
 
-          function publishMessage(message) {
-              return new Promise((resolve, reject) => {
-                  const json = JSON.stringify(message);
-
-                  sns.publish({
-                      TopicArn: process.env.SLACK_MESSAGE_RELAY_TOPIC_ARN,
-                      Message: json,
-                  }, (err) => {
-                      if (err) {
-                          reject(err);
-                      } else {
-                          resolve();
-                      }
-                  });
-              });
-          }
-
           exports.handler = async (event) => {
               const submissions = await getSubmissions();
               console.log(`API return count: ${submissions.length}`);
-              await publishMessage(messageForSubmissions(submissions));
+              await sns.publish({
+                  TopicArn: process.env.SLACK_MESSAGE_RELAY_TOPIC_ARN,
+                  Message: JSON.stringify(messageForSubmissions(submissions)),
+              }).promise();
           };
-      Description: >
+      Description: >-
         Gets recent submissions from Submittable and sends them to Slack via the
         Slack relay
       Environment:
@@ -173,7 +154,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt PollerFunctionIamRole.Arn
-      Runtime: nodejs10.x
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Misc
@@ -234,9 +215,8 @@ Resources:
       FunctionName: !Ref PollerFunction
       Principal: events.amazonaws.com
       SourceArn: !GetAtt PollerEventRule.Arn
-  PollerFunctionRetentionPolicy:
-    Type: "Custom::LogGroupRetentionPolicy"
+  PollerFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
     Properties:
-      ServiceToken: !Ref LogGroupRetentionPolicyFunctionArn
-      LogGroupName: !Sub "/aws/lambda/${PollerFunction}"
+      LogGroupName: !Sub /aws/lambda/${PollerFunction}
       RetentionInDays: 5
