--- a/etc/workable-poller.yml
+++ b/etc/workable-poller.yml
@@ -1,6 +1,6 @@
 # etc/workable-poller.yml
 AWSTemplateFormatVersion: "2010-09-09"
-Description: >
+Description: >-
   Creates a Lambda function that polls the Workable API and finds new
   applicants, which get sent to Slack
 Parameters:
@@ -18,11 +18,6 @@ Parameters:
     AllowedValues:
       - ENABLED
       - DISABLED
-  LogGroupRetentionPolicyFunctionArn:
-    Type: AWS::SSM::Parameter::Value<String>
-    Description: >
-      The Parameter Store key for the log group retention policy function's
-      ARN (not the ARN itself)
 Conditions:
   IsPollingPeriodOne: !Equals [!Ref PollingPeriod, 1]
 Resources:
@@ -118,7 +113,6 @@ Resources:
               return payload.candidates;
           }
 
-          function messageForCandidates(candidates) {
               return {
                   channel: SLACK_CHANNEL,
                   username: SLACK_USERNAME,
@@ -132,32 +126,18 @@ Resources:
               };
           }
 
-          function publishMessage(message) {
-              return new Promise((resolve, reject) => {
-                  const json = JSON.stringify(message);
-
-                  sns.publish({
-                      TopicArn: process.env.SLACK_MESSAGE_RELAY_TOPIC_ARN,
-                      Message: json,
-                  }, (err) => {
-                      if (err) {
-                          reject(err);
-                      } else {
-                          resolve();
-                      }
-                  });
-              });
-          }
-
           exports.handler = async (event) => {
               const jobs = await publishedJobs();
 
               const candidatesByJob = await Promise.all(jobs.map(j => candidatesForJob(j)));
               const candidates = [].concat(...candidatesByJob);
 
-              await publishMessage(messageForCandidates(candidates));
+              await sns.publish({
+                TopicArn: process.env.SLACK_MESSAGE_RELAY_TOPIC_ARN,
+                Message: JSON.stringify(message),
+              }).promise();
           };
-      Description: >
+      Description: >-
         Gets recent job applicants from Workable and sends them to Slack via the
         Slack relay
       Environment:
@@ -168,7 +148,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt PollerFunctionIamRole.Arn
-      Runtime: nodejs10.x
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Misc
@@ -229,9 +209,8 @@ Resources:
       FunctionName: !Ref PollerFunction
       Principal: events.amazonaws.com
       SourceArn: !GetAtt PollerEventRule.Arn
-  PollerFunctionRetentionPolicy:
-    Type: "Custom::LogGroupRetentionPolicy"
+  PollerFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
     Properties:
-      ServiceToken: !Ref LogGroupRetentionPolicyFunctionArn
-      LogGroupName: !Sub "/aws/lambda/${PollerFunction}"
+      LogGroupName: !Sub /aws/lambda/${PollerFunction}
       RetentionInDays: 5
