Add log group for upload Lambda

--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -218,11 +218,10 @@ Resources:
       FunctionName: !Ref UploadLambdaFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${UploadRestApi}/${UploadRestApiStage}/*"
-  UploadLambdaLogExpiration:
-    Type: "Custom::LogGroupRetentionPolicy"
+  UploadLambdaLogGroup:
+    Type: AWS::Logs::LogGroup
     Properties:
-      ServiceToken: !Ref LogGroupRetentionPolicyFunctionArn
-      LogGroupName: !Sub "/aws/lambda/${UploadLambdaFunction}"
+      LogGroupName: !Sub /aws/lambda/${UploadLambdaFunction}
       RetentionInDays: 60
   # Lambda Alarms
   UploadLambdaElevatedErrorAlarm:
