Add log groups to S3 upload Lambdas

--- a/etc/serverless-s3-upload/template.yml
+++ b/etc/serverless-s3-upload/template.yml
@@ -108,6 +108,11 @@ Resources:
               - sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+  WebsiteApiFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${WebsiteApiFunction}
+      RetentionInDays: 5
   WebsiteApi:
     Type: AWS::ApiGateway::RestApi
     Properties:
@@ -178,6 +183,11 @@ Resources:
       Tags:
         Project: serverless-s3-upload
       Timeout: 3
+  StaticWebsiteFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${StaticWebsiteFunction}
+      RetentionInDays: 5
   StaticWebsiteFunctionIamRole:
     Type: AWS::IAM::Role
     Properties:
@@ -234,6 +244,11 @@ Resources:
       Tags:
         Project: serverless-s3-upload
       Timeout: 3
+  StaticWebsiteAuthorizerFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${StaticWebsiteAuthorizerFunction}
+      RetentionInDays: 5
   StaticWebsiteAuthorizerFunctionIamRole:
     Type: AWS::IAM::Role
     Properties:
