Add log group for Tower Lambda

--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -122,3 +122,8 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref TowerLambdaFunction
+  TowerLambdaFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${TowerLambdaFunction}
+      RetentionInDays: 14
