Add log group for static site deploy custom resource Lambda

--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -82,6 +82,11 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       Timeout: 60
+  S3StaticSiteDeployFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${S3StaticSiteDeployFunction}
+      RetentionInDays: 14
   # Static site stacks
   BacksawStack:
     Type: "AWS::CloudFormation::Stack"
