Add log group to ASG sizer function

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -841,6 +841,11 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       Timeout: 30
+  ASGSizerFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${ASGSizerFunction}
+      RetentionInDays: 60
   ASGSizerTriggerIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
