Update daily cost report graphs
Improves support for savings plans, and shows unutilized reservations for all services

--- a/etc/aws-cost-report/template.yml
+++ b/etc/aws-cost-report/template.yml
@@ -39,6 +39,8 @@ Resources:
                   - ce:GetReservationCoverage
                   - ce:GetCostAndUsage
                   - ce:GetSavingsPlansCoverage
+                  - ce:GetReservationUtilization
+                  - ce:GetSavingsPlansUtilization
                 Resource:
                   - "*"
       ManagedPolicyArns:
