Remove networks from contegix, add back as cname on aws

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -424,6 +424,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub api.${Domain}
+        - ResourceRecords:
+            - networks.prx.tech.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub networks.${Domain}
         - Type: A
           Name: !Ref Domain
           AliasTarget:
@@ -725,11 +730,6 @@ Resources:
           Type: A
           Name: !Sub webstats.srg01.${Domain}
         - ResourceRecords:
-            - "199.119.122.228"
-          TTL: "300"
-          Type: A
-          Name: !Sub networks.${Domain}
-        - ResourceRecords:
             - "199.119.122.229"
           TTL: "300"
           Type: A
@@ -805,11 +805,6 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Sub staging.${Domain}
-        - ResourceRecords:
-            - "199.119.122.230"
-          TTL: "300"
-          Type: A
-          Name: !Sub staging.networks.${Domain}
         - ResourceRecords:
             - "199.119.122.230"
           TTL: "300"
