Enable TS linting for notifications directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "allowJs": true
   },
   "exclude": ["node_modules", "**/node_modules/*"],
-  "include": ["ci"]
+  "include": ["ci", "notifications"]
 }
