Add x-account CloudWatch sharing role to stack set

--- a/stacksets/cloudwatch-alarm-reader-role.yml
+++ b/stacksets/cloudwatch-alarm-reader-role.yml
@@ -19,6 +19,7 @@ Parameters:
     Type: String
     AllowedValues:
       - us-east-1
+      - us-east-2
     Default: us-east-1
   RoleNamePrefix:
     Type: String
@@ -62,4 +63,4 @@ Resources:
       #     Value: !Ref AWS::StackName
       #   - Key: "prx:cloudformation:stack-id"
       #     Value: !Ref AWS::StackId
-      TemplateURL: https://s3-external-1.amazonaws.com/cf-templates-1m3ojrwerxj2t-us-east-1/2020317r5q-cloudwatch-alarm-reader-role.yml
+      TemplateURL: https://s3.us-east-2.amazonaws.com/cf-templates-1m3ojrwerxj2t-us-east-2/2020337tGw-cloudwatch-alarm-reader-role.yml
