Add tags to list accounts role

--- a/etc/cloudwatch-data-sharing-org-list-role.yml
+++ b/etc/cloudwatch-data-sharing-org-list-role.yml
@@ -42,3 +42,10 @@ Resources:
                 Resource: "*"
           PolicyName: CloudWatch-CrossAccountSharing-ListAccounts-Policy
       RoleName: CloudWatch-CrossAccountSharing-ListAccountsRole
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
