--- a/etc/cloudwatch-data-sharing-org-list-role.yml
+++ b/etc/cloudwatch-data-sharing-org-list-role.yml
@@ -4,7 +4,7 @@ Description: >-
   Creates a IAM role with the special name
   CloudWatch-CrossAccountSharing-ListAccountsRole, which CloudWatch uses for
   cross-account console functionality. This stack should launched only in the
-  organization's management account.
+  Organization's management account.
 
 Parameters:
   MonitoringAccountIds:
