Allow organzation-wide subscriptions to Slack relay topic

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -137,6 +137,16 @@ Resources:
             Condition:
               StringEquals:
                 "aws:PrincipalOrgID": !Ref SnsTopicPolicyPublishAllowanceOrganizationId
+          - Sid: OrganizationSubscribe
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - sns:Subscribe
+            Resource: !Ref SlackMessageRelaySnsTopic
+            Condition:
+              StringEquals:
+                "aws:PrincipalOrgID": !Ref SnsTopicPolicyPublishAllowanceOrganizationId
           - Sid: OwnerAllAccess
             Effect: Allow
             Principal:
