Add CloudFormation topic subscription

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -265,6 +265,11 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN: !Ref SlackMessageRelaySnsTopic
+      Events:
+        SnsMessages:
+          Properties:
+            Topic: !Ref CloudFormationNotificationSnsTopic
+          Type: SNS
       Handler: index.handler
       MemorySize: 128
       Policies:
