Enable Lambda Insights on Count Lambda

--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -72,6 +72,7 @@ Resources:
         - "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaKinesisExecutionRole"
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
+        - "arn:aws:iam::aws:policy/CloudWatchLambdaInsightsExecutionRolePolicy"
       Tags:
         - Key: Project
           Value: Dovetail
@@ -98,6 +99,11 @@ Resources:
           S3_BUCKET: !Ref S3Bucket
           S3_PREFIX: !Ref S3Prefix
       Handler: index.handler
+      Layers:
+        !If
+          - IsProduction
+          - - !Sub arn:aws:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:12
+          - !Ref AWS::NoValue
       MemorySize: 2048
       Role: !GetAtt DovetailCountsLambdaExecutionIAMRole.Arn
       Runtime: nodejs10.x
