Reduce CloudFormation IAM capabilities

--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -169,6 +169,8 @@ Resources:
         - Name: Deploy
           Actions:
             # CloudWatch data sharing role
+            # Deploys an organization-wide, service-managed StackSet in one
+            # region in each account
             - Name: CloudWatchDataSharingRoleStackSet
               ActionTypeId:
                 Category: Deploy
@@ -203,7 +205,7 @@ Resources:
                 Version: "1"
               Configuration:
                 StackSetName: org-root-account-activity-monitor2
-                Capabilities: CAPABILITY_NAMED_IAM
+                Capabilities: CAPABILITY_IAM
                 Description: >-
                   Launches a root account activity monitor in one region in each account
                   in an AWS Organization. An activity monitor can monitor activity in all
